SERVER-24963 Fix invalidation of cursors on system.indexes

(cherry picked from commit 647ebfac9ebf1c5fc431a2ba813bf9c97b9bdab9)