src/mongo/db/storage/mmap_v1/catalog/namespace_details_collection_entry.cpp
@@ -32,6 +32,8 @@
 
 #include "mongo/db/storage/mmap_v1/catalog/namespace_details_collection_entry.h"
 
+#include "mongo/db/catalog/database.h"
+#include "mongo/db/catalog/database_holder.h"
 #include "mongo/db/index/index_descriptor.h"
 #include "mongo/db/ops/update.h"
 #include "mongo/db/record_id.h"
@@ -256,6 +258,16 @@ Status NamespaceDetailsCollectionCatalogEntry::removeIndex(OperationContext* txn
 
         d->idx(getTotalIndexCount(txn)) = IndexDetails();
     }
+
+    // Soneone may be querying the system.indexes namespace directly, so we need to invalidate
+    // its cursors. Having to go back up through the DatabaseHolder is a bit of a layering
+    // violation, but at this point we're not going to add more MMAPv1 specific interfaces.
+    // We can find the name of the database through the first entries of the CollectionMap.
+    StringData dbName(nsToDatabaseSubstring(_db->_collections.begin()->first));
+    invariant(txn->lockState()->isDbLockedForMode(dbName, MODE_X));
+    Database* db = dbHolder().get(txn, dbName);
+    Collection* systemIndexes = db->getCollection(db->getSystemIndexesName());
+    systemIndexes->getCursorManager()->invalidateDocument(txn, infoLocation, INVALIDATION_DELETION);
 
     // remove from system.indexes
     _indexRecordStore->deleteRecord(txn, infoLocation);
